# library

./: .env  Cargo.toml
migrations/: 20240221231556_authors.sql  20240221231842_books.sql  20240221234743_collections.sql  20240222212756_alter-table-authors.sql  20240223010230_alter-authors-add-column-updated-at.sql  20240228001503_alter-books-add-column-dates.sql
src/: main.rs
src/domain/: authors.rs  books.rs  collections.rs  errors.rs  mod.rs
src/handlers/: authors.rs  books.rs  collections.rs  mod.rs
src/repositories/: authors.rs  books.rs  collections.rs  mod.rs
src/routes/: authors.rs  books.rs  collections.rs  mod.rs
